--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "nanoid": "^3.3.1",
     "node-gtts": "^2.0.2"
   },
   "devDependencies": {
